# Credit_ai_deployment

./: README.md
microservices_architecture/: .env  README.md  main.py  pyproject.toml
microservices_architecture/services/AI_analysis/: .env  main.py  model.py
microservices_architecture/services/AI_analysis/api/: endpoints.py
microservices_architecture/services/AI_analysis/core/: aianalysis.py
microservices_architecture/services/account_overview/: main.py
microservices_architecture/services/account_overview/core/: account_processor.py
microservices_architecture/services/financial_statement/: main.py
microservices_architecture/services/financial_statement/core/: financial_api.py
