[project]
name = "microservices-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "uvicorn>=0.30.0",
]

[tool.uv.workspace]
members = [
    "services/financial_statement",
    "services/account_overview",
    "services/ai_analysis",
]
